# MangoRHI

./: .gitmodules  CMakeLists.txt  README.md
MangoRHI/: CMakeLists.txt
MangoRHI/include/MangoRHI/: MangoRHI.hpp  command.hpp  commons.hpp  context.hpp  descriptor_set.hpp  logger.hpp  renderpass.hpp  resource_factory.hpp  resource_manager.hpp  swapchain.hpp
MangoRHI/include/MangoRHI/resource/: buffer.hpp  render_target.hpp  sampler.hpp  shader_program.hpp  texture.hpp
MangoRHI/src/: commons.cpp  logger.cpp
MangoRHI/src/vulkan/: vulkan_command.cpp  vulkan_command.hpp  vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_commons.cpp  vulkan_commons.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.hpp  vulkan_descriptor_set.cpp  vulkan_descriptor_set.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_framebuffer.cpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_resource_factory.cpp  vulkan_resource_factory.hpp  vulkan_resource_manager.cpp  vulkan_resource_manager.hpp  vulkan_shader_program.cpp  vulkan_shader_program.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_synchronization.cpp  vulkan_synchronization.hpp
MangoRHI/src/vulkan/descriptors/: vulkan_descriptor.cpp  vulkan_descriptor.hpp  vulkan_input_render_target_descriptor.cpp  vulkan_input_render_target_descriptor.hpp  vulkan_texture_descriptor.cpp  vulkan_texture_descriptor.hpp  vulkan_uniform_descriptor.cpp  vulkan_uniform_descriptor.hpp
MangoRHI/src/vulkan/resource/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_render_target.cpp  vulkan_render_target.hpp  vulkan_sampler.cpp  vulkan_sampler.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_shader_program.cpp  vulkan_shader_program.hpp  vulkan_texture.cpp  vulkan_texture.hpp
examples/GBuffer/: CMakeLists.txt  a.cpp  main.cpp
examples/GBuffer/assets/shaders/: shader.frag  shader.vert  shader2.frag  shader2.vert
examples/ImGui/: CMakeLists.txt  imgui.ini  main.cpp
examples/ImGui/assets/shaders/: shader.frag  shader.vert
examples/Sandbox/: CMakeLists.txt  sandbox.cpp
examples/Sandbox/assets/: shader.frag  shader.vert
examples/Sandbox/assets/shaders/: shader.frag  shader.vert
include/: MangoRHI.hpp  command.hpp  commons.hpp  context.hpp  renderpass.hpp  shader_program.hpp
include/MangoRHI/: command.hpp  commons.hpp  context.hpp  descriptor_set.hpp  renderpass.hpp  resource_manager.hpp  shader_program.hpp  swapchain.hpp
include/MangoRHI/resource/: buffer.hpp  sampler.hpp  shader.hpp  texture.hpp
include/resource/: buffer.hpp  render_target.hpp  shader.hpp
src/: commons.cpp  logger.cpp
src/vulkan/: MangoRHIVulkan.hpp  vulkan_command.cpp  vulkan_command.hpp  vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_commons.cpp  vulkan_commons.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.hpp  vulkan_descriptor_set.cpp  vulkan_descriptor_set.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_framebuffer.cpp  vulkan_framebuffer.hpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_resource_manager.cpp  vulkan_resource_manager.hpp  vulkan_shader_program.cpp  vulkan_shader_program.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_synchronization.cpp  vulkan_synchronization.hpp
src/vulkan/resource/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_render_target.cpp  vulkan_render_target.hpp  vulkan_sampler.cpp  vulkan_sampler.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_texture.cpp  vulkan_texture.hpp
