project(ImGuiTest)
file(GLOB sources imgui/*.cpp)
add_executable(ImGuiTest main.cpp ${sources} imgui/backends/imgui_impl_glfw.cpp imgui/backends/imgui_impl_vulkan.cpp)
target_include_directories(ImGuiTest PUBLIC imgui/)
target_link_directories(ImGuiTest PUBLIC ../../build/MangoRHI)
target_link_libraries(ImGuiTest PUBLIC MangoRHI glfw)
